[GTK] fast/events/message-channel-gc-4.html is flaky https://bugs.webkit.org/show_bug.cgi?id=182104

Patch by Fujii Hironori <Hironori.Fujii@sony.com> on 2018-02-02
Reviewed by Carlos Garcia Campos.

Source/WTF:

RELEASE_ASSERT of ThreadSpecific::set fails because
RunLoop::current is called even in GC thread since r227275.

* wtf/RunLoop.cpp:
(WTF::RunLoop::current):
Let the second template argument of ThreadSpecific CanBeGCThread::True.

LayoutTests:

* platform/gtk/TestExpectations:
Unmarked fast/events/message-channel-gc-4.html and fast/workers/worker-cloneport.html.

Canonical link: https://commits.webkit.org/198219@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@228001 268f45cc-cd09-0410-ab3c-d52691b4dbfc